Do not run pager with root privelages (so we can add a web client)

--- a/systemd/pager.service
+++ b/systemd/pager.service
@@ -4,6 +4,7 @@ Description=Pager Service
 [Service]
 ExecStart=/home/pi/pagerpi/pagerTestV020.py
 StandardOutput=null
+User=pi
  
 [Install]
 WantedBy=multi-user.target
